discovered it is hard to read text with the pixel overlay on.  Will do further research on how to fix the issue soon.  Swapped names of themes to ms and osx, more to be determined soon.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -74,7 +74,7 @@
   position: relative;
   overflow: hidden;
 }
-.container::after {
+.container[data-theme="ms"]::after {
   content: " ";
   display: block;
   position: absolute;
@@ -87,7 +87,7 @@
   z-index: 2;
   pointer-events: none;
 }
-.container::before {
+.container[data-theme="ms"]::before {
   content: " ";
   display: block;
   position: absolute;
@@ -224,6 +224,7 @@
   position: fixed;
   height: 90vh;
   width: 90vw;
+  max-width: 1120px;
   top: 50%;
   left: 50%;
   border: 4px solid var(--mainColor);
