--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,3 +1,22 @@
+.container {
+  padding: 30px;
+  background-color: white;
+  min-height: 100%;
+}
+
+.container p {
+  font-size: 1.25rem;
+}
+
+.link {
+  text-decoration: underline;
+  background: none;
+  color: blue;
+  border: none;
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
 .headshot {
   position: absolute;
   top: 15px;
